make prettier